--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,10 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".CreateCourseActivity">
-        </activity>
-        <activity android:name=".CoursesActivity">
-        </activity>
-        <activity android:name=".GamesActivity">
-        </activity>
-        <activity android:name=".PlayerActivity">
-        </activity>
-        <activity android:name=".PlayersActivity">
-        </activity>
-        <activity android:name=".LoadingActivity">
+            android:theme="@style/Theme.App">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
